syntax = "proto3";

message MainTenis {
  uint32 retcode = 1;
  string msg = 2;
  string url = 3;
}

message ServerDispatchDataCBT2 {
  uint32 retcode = 1;
  string msg = 2;
  string region_name = 3;
  string ip = 4;
  uint32 port = 5;
  uint32 stop_begin_time = 6;
  uint32 stop_end_time = 7;
  bool data_use_asset_boundle = 8;
  bool res_use_asset_boundle = 9;
  string asset_bundle_url = 10;
  string ex_resource_url = 11;
  string lua_url = 12;
  uint32 asb_relogin = 13;
  string asb_memo = 14;
  uint32 design_data_relogin = 15;
  string design_data_memo = 16;
  string client_secret_key = 17;
  string record_game_object_user_data = 18;
  bool use_tcp = 19;
  string custom_service_url = 20;
  string operation_feedback_url = 21;
  string privacy_in_game_url = 22;
  bool client_record_replay = 23;
  string server_description = 24;
}

message ServerDispatchData {
  string onlineReplayUploadUrl = 188;
  bool iINOPFNCDEN = 334;
  string _AsbReloginDesc = 7;
  bool eventTrackingOpen = 549;
  string privacyInGameUrl = 789;
  bool enableUploadBattleLog = 1340;
  string custom_service_url = 1521;
  string name = 9;
  string cECLAOALPJD = 1995;
  int64 stopEndTime = 8;
  uint32 m_value = 15;
  string iFixPatchRevision = 1423;
  uint32 port = 11;
  string luaPatchVersion = 270;
  string community_activity_url = 1751;
  string kMJAFDLEPOH = 472;
  bool iOSExam = 1115;
  string loginWhiteMsg = 471;
  bool fOIJNCKDHNK = 415;
  string _LuaBundleVersionUpdateUrl = 4;
  string official_community_url = 385;
  bool mTPSwitch = 684;
  string _DesignDataBundleVersionUpdateUrl = 6;
  string host = 13;
  string onlineReplayDownloadUrl = 1771;
  string redeem_code_url = 241;
  string temporary_maintenance_url = 1084;
  uint32 _DesignDataReloginType = 3;
  string stopDesc = 14;
  bool useTcp = 2044;
  int64 stopBeginTime = 2;
  string _predownloadUpdateUrl = 1276;
  bool forbidRecharge = 1659;
  bool enableAssetBundleVersionUpdate = 12;
  string serverDescription = 242;
  bool enableSaveReplayFile = 306;
  string thirdPrivacyInGameUrl = 659;
  string teenagerPrivacyInGameUrl = 87;
  uint32 _AsbReloginType = 10;
  string _DesignDataReloginDesc = 926;
  string personalInformationInGameUrl = 971;
  string _AssetBundleVersionUpdateUrl = 1;
  string operation_feedback_url = 704;
  string _IFixPatchVersionUpdateUrl = 1471;
  bool enableDesignDataBundleVersionUpdate = 5;
}

message RegionSimpleInfo {
    string dispatch_url = 3;
    string env_type = 4;
    string name = 1;
    string title = 5;
}

message QueryRegionListHttpRsp {
    repeated RegionSimpleInfo region_list = 4;
}

// Name: OBNNLPMNKJK
message ServerDispatchDataNEW {
  uint32 port = 2;
  bool KKHJNPJMNIN = 1238;
  string HLGCFGBPDIH = 724;
  string AGCOHMIBFPO = 102;
  bool HFGEFGFEMCN = 193;
  string CNEIJFENGAG = 232;
  bool LNNIPPHEPOA = 10;
  string login_white_msg = 654;
  uint32 DOAMFCDLJIL = 8;
  uint32 BOPLAMMNLFK = 9;
  uint32 retcode = 15;
  bool AFBOJAGEPFB = 788;
  string asset_bundle_url = 14;
  string GPFNNIDOAOK = 222;
  string MAHIBOGOGOC = 11;
  string OKGBJBACNKG = 1107;
  int64 stop_end_time = 5;
  bool CINCKAOLOBK = 1374;
  string IJPFDPNMGCL = 1670;
  string ACNKLOFEOJA = 1592;
  string lua_version = 349;
  bool GHOOCKECBNE = 1986;
  string lua_url = 4;
  string replay_url = 1376;
  bool JEGDHPFJFPG = 3;
  bool HGEDHANHIFN = 622;
  string ex_resource_url = 6;
  string DIGDNMMEGFB = 1568;
  string ip = 1;
  string client_secret_key = 178;
  bool OBLCBPBNLCM = 1215;
  string ifix_url = 2040;
  bool NGLCAOKANHM = 432;
  string DOGIAANDIKF = 1011;
  string upload_replay_url = 529;
  string OLHLDGOHFBN = 1050;
  string msg = 7;
  bool BBNCMGGKJAE = 1454;
  string MAEBANOEDMP = 1157;
  string region_name = 13;
  string HBDMGJEDABD = 1920;
  string GDOGBBPAPJH = 823;
  string LFIAADINMBB = 581;
  int64 stop_begin_time = 12;
  string DGCIOFAFOFN = 596;
  bool LCIDMKEDDCL = 1923;
}